доделал состоянии фильтра

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 					<section class="information-review">
 						<h2 class="information-title">Компания «Техномарт»</h2>
 						<p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
-						<p>Мы можем доставить ваш товар в самые отдаленные точки России!<br> Техномарт работает со многими транспортными компаниями:</p>
+						<p>Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:</p>
 						<ul class="collaboration">
 							<li>Деловые линии</li>
 							<li>Автотрейдинг</li>
