--- a/inner.html
+++ b/inner.html
@@ -134,7 +134,7 @@
 						<legend class="fieldset-item-title">Питание:</legend>
 						<ul class="power-list">
 							<li class="filter-option">
-								<input class="visually-hidden filter-input filter-input-radio" type="radio" name="power" value="battery" id="filter-battery" checked>
+								<input class="visually-hidden filter-input filter-input-radio" type="radio" name="power" value="battery" id="filter-battery">
 								<label for="filter-battery">Аккумуляторные</label>
 							</li>
 							<li class="filter-option">
@@ -155,7 +155,7 @@
 						<li><a class="sorting-link by-price sorting-link-current" href="#">По цене</a></li>
 						<li><a class="sorting-link by-type" href="#">По типу</a></li>
 						<li><a class="sorting-link by-functionality" href="#">По функционалу</a></li>
-						<li><a class="sorting-link arrow-up" aria-label="по возрастанию"></a></li>
+						<li><a class="sorting-link arrow-up arrow-up-current" aria-label="по возрастанию"></a></li>
 						<li><a class="sorting-link arrow-down" aria-label="по убыванию"></a></li>
 					</ul>
 				</div>
@@ -304,10 +304,8 @@
 				<div class="perforator-about-wrapper">
 					<div class="container">
 						<section class="perforator-about">
-							<div class="container">
 								<h2>Пара слов о перфораторах</h2>
 								<p>Перфоратор &#8211; универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.<br> Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
-							</div>
 							</section>
 						</div>
 					</div>
