--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             <a href="#"><img src="img/dewalt.jpg" width="146" height="44" alt="Товарный знак бренда DeWalt"></a>
           </li>
           <li class="brands-item brands-interscol">
-            <a href="#"><img src="img/интерскол.jpg" width="200" height="88" alt="Товарный знак бренда Интерскол"></a>
+            <a href="#"><img src="img/interscol.jpg" width="200" height="88" alt="Товарный знак бренда Интерскол"></a>
           </li>
           <li class="brands-item brands-hitachi">
             <a href="#"><img src="img/hitachi.jpg" width="169" height="31" alt="Товарный знак бренда HITACHI"></a>
@@ -234,49 +234,51 @@
     </section>
     <!-- SERVICES -->
     <section class="services">
-      <div class="services-wrapper">
-        <div class="container">
-        	<!-- services advantage -->
-          <div class="services-advantage">
-          	<!-- title of services -->
-            <h2 class="services-title">Сервисы</h2>
-            <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
-          </div>
-          <div class="services-container">
-          	<!-- services controls -->
-            <div class="services-controls">
-              <button class="services-control" type="button">Доставка</button>
-              <button class="services-control" type="button">Гарантия</button>
-              <button class="services-control" type="button">Кредит</button>
-            </div>
-            <!-- delivery slider -->
-            <div class="delivery-slider">
-              <div class="delivery-slider-content">
-                <h3 class="delivery-title">Доставка</h3>
-                <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем,<br> поднимая его на ваш этаж!</p>
-              </div>
-              <img class="delivery-img" src="img/delivery-truck.png" width="468" height="261" alt="">
-            </div>
-            <!-- warranty slider -->
-            <div class="warranty-slider">
-              <div class="warranty-slider-content">
-                <h3 class="warranty-title">Гарантия</h3>
-                <p>Если купленный у нас товар поломается или заискрит,<br> а также в случае пожара, спровоцированного его возгаранием, вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый.<br> Дом уж восстановите как-нибудь сами.</p>
-              </div>
-              <img class="warranty-img" src="img/warranty-medal.png" width="389" height="283" alt="">
-            </div>
-            <!-- credit slider -->
-            <div class="credit-slider">
-              <div class="credit-slider-content">
-                <h3 class="credit-title">Кредит</h3>
-                <p>Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.</p>
-                <a class="btn credit-btn" href="#">Отправить заявку</a>
-              </div>
-              <img class="credit-img" src="img/credit-cash.png" width="465" height="285" alt="">
-            </div>
-          </div>
-        </div>
-      </div>
+    	<div class="services-wrapper">
+    		<div class="container">
+    			<!-- services advantage -->
+    			<div class="services-advantage">
+    				<!-- title of services -->
+    				<h2 class="services-title">Сервисы</h2>
+    				<p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+    			</div>
+    			<div class="services-container">
+    				<!-- services controls -->
+    				<div class="services-controls">
+    					<button class="services-control" type="button">Доставка</button>
+    					<button class="services-control" type="button">Гарантия</button>
+    					<button class="services-control" type="button">Кредит</button>
+    				</div>
+    				<div class="services-slider">
+    					<!-- delivery slider -->
+    					<div class="delivery-slide">
+    						<div class="delivery-slider-content">
+    							<h3 class="delivery-title">Доставка</h3>
+    							<p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем,<br> поднимая его на ваш этаж!</p>
+    						</div>
+    						<img class="delivery-img" src="img/delivery-truck.png" width="468" height="261" alt="">
+    					</div>
+    					<!-- warranty slider -->
+    					<div class="warranty-slide">
+    						<div class="warranty-slider-content">
+    							<h3 class="warranty-title">Гарантия</h3>
+    							<p>Если купленный у нас товар поломается или заискрит,<br> а также в случае пожара, спровоцированного его возгаранием, вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый.<br> Дом уж восстановите как-нибудь сами.</p>
+    						</div>
+    						<img class="warranty-img" src="img/warranty-medal.png" width="389" height="283" alt="">
+    					</div>
+    					<!-- credit slider -->
+    					<div class="credit-slide">
+    						<div class="credit-slider-content">
+    							<h3 class="credit-title">Кредит</h3>
+    							<p>Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.</p>
+    							<a class="btn credit-btn" href="#">Отправить заявку</a>
+    						</div>
+    						<img class="credit-img" src="img/credit-cash.png" width="465" height="285" alt="">
+    					</div>
+    				</div>
+    			</div>
+    		</div>
+    	</div>
     </section>
     <!-- INFORMATION -->
     <div class="information">
@@ -297,7 +299,9 @@
         <section class="contacts">
           <h2 class="contacts-title">Контакты</h2>
           <p>Вы можете забрать товар сами,<br>заехав в наш офис:</p>
-          <img class="map-location" src="img/map.jpg" width="300" height="158" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
+          <a class="map-link" href="#">
+          	<img class="map-location" src="img/map.jpg" width="300" height="158" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
+          </a>
           <a class="btn write-us" href="#">Заблудились? Напишите нам!</a>
         </section>
       </div>
@@ -305,86 +309,93 @@
   </main>
   <!-- FOOTER -->
   <footer class="footer">
-    <!-- footer top -->
-    <div class="footer-top">
-      <div class="container footer-top-row">
-        <div class="footer-contact">
-        	<!-- footer logo -->
-          <a class="footer-logo-link" href="index.html">
-            <img class="footer-logo" src="img/icons/footer-logo.svg" width="138" height="23" alt="Логотип Техномарта">
-          </a>
-          <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
-            <a class="footer-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
-          </p>
-        </div>
-        <!-- footer navigation items -->
-        <div class="footer-navigation-items">
-          <ul class="footer-navigation">
-            <li class="footer-navigation-item"><a class="footer-navigation-link" href="#">Компания</a></li>
-            <li class="footer-navigation-item"><a class="footer-navigation-link" href="#">Новости</a></li>
-            <li class="footer-navigation-item"><a class="footer-navigation-link" href="#">Каталог</a></li>
-            <li class="footer-navigation-item"><a class="footer-navigation-link" href="#">Доставка</a></li>
-            <li class="footer-navigation-item"><a class="footer-navigation-link" href="#">Контакты</a></li>
-          </ul>
-          <ul class="footer-offers">
-            <li class="footer-offers-item"><a class="footer-offers-link" href="#">Материалы</a></li>
-            <li class="footer-offers-item"><a class="footer-offers-link" href="#">Техника</a></li>
-            <li class="footer-offers-item"><a class="footer-offers-link" href="#">Инструмент</a></li>
-            <li class="footer-offers-item"><a class="footer-offers-link" href="#">Спецпредложения</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <!-- footer bottom -->
-    <div class="footer-bottom">
-      <div class="container footer-bottom-row">
-        <p class="copyright">© 2010–2019 Компания «Техномарт» Все права защищены</p>
-        <!-- footer social -->
-        <ul class="footer-social">
-          <li class="footer-social-item"><a class="btn-social btn-social-vk" href="#" aria-label="Вконтакте"></a></li>
-          <li class="footer-social-item"><a class="btn-social btn-social-fb" href="#" aria-label="Фейсбук"></a></li>
-          <li class="footer-social-item"><a class="btn-social btn-social-i" href="#" aria-label="Инстаграм"></a></li>
-        </ul>
-        <!-- feedback -->
-        <p class="feedback">Обратная связь:
-          <a class="feedback-link" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-        </p>
-        <!-- designed by -->
-        <p class="designed-by">Разработано -
-          <a class="designed-by-link href=" https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru </a> </p> </div> </div> </footer> <!-- MODAL-FEEDBACK-->
-            <section class="modal modal-feedback">
-              <div class="modal-main">
-                <h2 class="visually-hidden">Напишите нам</h2>
-                <form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
-                  <div class="feedback-form-main">
-                    <p class="feedback-name-item">
-                      <label class="feedback-label" for="name">Ваше имя:</label>
-                      <input class="feedback-input" type="text" name="name" id="name" placeholder="Имя Фамилия">
-                    </p>
-                    <p class="feedback-name-item">
-                      <label class="feedback-label" for="email">Ваш e-mail:</label>
-                      <input class="feedback-input" type="email" name="email" id="email" placeholder="email@example.com">
-                    </p>
-                    <p class="feedback-name-item">
-                      <label class="feedback-label" for="message">Текст письма:</label>
-                      <textarea class="feedback-content-area" id="message" name="message" placeholder="В свободной форме"></textarea>
-                    </p>
-                  </div>
-                </form>
-              </div>
-              <div class="btn-send-background">
-                <button class="btn-send" type="submit">Отправить</button>
-              </div>
-              <button class="modal-close" type="button" aria-label="Закрыть модальное окно"></button>
-            </section>
-            <!-- MODAL MAP -->
-            <section class="modal modal-map">
-              <h2 class="visually-hidden">Как до нас добраться</h2>
-              <div>
-                <img src="img/map_big.jpg" width="940" height="446" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
-              </div>
-              <button class="modal-close" type="button" aria-label="Закрыть модальное окно"></button>
-            </section>
+  	<!-- footer top -->
+  	<div class="footer-top">
+  		<div class="container footer-top-row">
+  			<div class="footer-contact">
+  				<!-- footer logo -->
+  				<a class="footer-logo-link" href="index.html">
+  					<img class="footer-logo" src="img/icons/footer-logo.svg" width="138" height="23" alt="Логотип Техномарта">
+  				</a>
+  				<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
+  					<a class="footer-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
+  				</p>
+  			</div>
+  			<!-- footer navigation items -->
+  			<div class="footer-navigation-items">
+  				<ul class="footer-navigation">
+  					<li class="footer-navigation-item"><a class="footer-navigation-link" href="#">Компания</a></li>
+  					<li class="footer-navigation-item"><a class="footer-navigation-link" href="#">Новости</a></li>
+  					<li class="footer-navigation-item"><a class="footer-navigation-link" href="#">Каталог</a></li>
+  					<li class="footer-navigation-item"><a class="footer-navigation-link" href="#">Доставка</a></li>
+  					<li class="footer-navigation-item"><a class="footer-navigation-link" href="#">Контакты</a></li>
+  				</ul>
+  				<ul class="footer-offers">
+  					<li class="footer-offers-item"><a class="footer-offers-link" href="#">Материалы</a></li>
+  					<li class="footer-offers-item"><a class="footer-offers-link" href="#">Техника</a></li>
+  					<li class="footer-offers-item"><a class="footer-offers-link" href="#">Инструмент</a></li>
+  					<li class="footer-offers-item"><a class="footer-offers-link" href="#">Спецпредложения</a></li>
+  				</ul>
+  			</div>
+  		</div>
+  	</div>
+  	<!-- footer bottom -->
+  	<div class="footer-bottom">
+  		<div class="container footer-bottom-row">
+  			<p class="copyright">© 2010–2019 Компания «Техномарт» Все права защищены</p>
+  			<!-- footer social -->
+  			<ul class="footer-social">
+  				<li class="footer-social-item"><a class="btn-social btn-social-vk" href="#" aria-label="Вконтакте"></a></li>
+  				<li class="footer-social-item"><a class="btn-social btn-social-fb" href="#" aria-label="Фейсбук"></a></li>
+  				<li class="footer-social-item"><a class="btn-social btn-social-i" href="#" aria-label="Инстаграм"></a></li>
+  			</ul>
+  			<!-- feedback -->
+  			<p class="feedback">Обратная связь:
+  				<a class="feedback-link" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+  			</p>
+  			<!-- designed by -->
+  			<p class="designed-by">Разработано -
+  				<a class="designed-by-link" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru </a>
+  			</p>
+  		</div>
+  	</div> 
+  </footer> 
+  <!-- MODAL-FEEDBACK-->
+  <section class="modal modal-feedback">
+  	<div class="modal-main">
+  		<h2 class="visually-hidden">Напишите нам</h2>
+  		<form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
+  			<div class="feedback-form-main">
+  				<p class="feedback-name-item">
+  					<label class="feedback-label" for="name">Ваше имя:</label>
+  					<input class="feedback-input" type="text" name="name" id="name" placeholder="Имя Фамилия">
+  				</p>
+  				<p class="feedback-name-item">
+  					<label class="feedback-label" for="email">Ваш e-mail:</label>
+  					<input class="feedback-input" type="email" name="email" id="email" placeholder="email@example.com">
+  				</p>
+  				<p class="feedback-name-item">
+  					<label class="feedback-label" for="message">Текст письма:</label>
+  					<textarea class="feedback-content-area" id="message" name="message" placeholder="В свободной форме"></textarea>
+  				</p>
+  			</div>
+  			<div class="btn-send-background">
+  				<button class="btn-send" type="submit">Отправить</button>
+  			</div>
+  			<button class="modal-close" type="button" aria-label="Закрыть модальное окно"></button>
+  		</form>
+  	</div>
+  </section>
+  <!-- MODAL MAP -->
+  <section class="modal modal-map">
+  	<h2 class="visually-hidden">Как до нас добраться</h2>
+  	<div>
+  		<img src="img/map_big.jpg" width="940" height="446" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
+  	</div>
+  	<button class="modal-close" type="button" aria-label="Закрыть модальное окно"></button>
+  </section>
+
+            <script src="js/scripts.js"></script>
 </body>
 
 </html>
