--- a/inner.html
+++ b/inner.html
@@ -68,7 +68,7 @@
     <!-- breakdcrumbs -->
     <div class="container">
       <ul class="breadcrumbs">
-        <li class="breadcrumbs-item breadcrumbs-home"><a href="#"></a></li>
+        <li class="breadcrumbs-item breadcrumbs-home"><a class="breadcrumbs-home-link" href="#"></a></li>
         <li class="breadcrumbs-item breadcrumbs-catalog"><a href="#">Каталог</a></li>
         <li class="breadcrumbs-item breadcrumbs-tool"><a href="#">Инструмент</a></li>
         <li class="breadcrumbs-item breadcrumbs-perforator breadcrumbs-current">Перфораторы</li>
@@ -373,5 +373,7 @@
       <button class="modal-close" type="button" aria-label="Закрыть модальное окно"></button>
     </div>
   </section>
+
+  <script src="js/scripts.js"></script>
 </body>
 </html>
