--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
   				</p>
   				<p class="feedback-name-item">
   					<label class="feedback-label" for="message">Текст письма:</label>
-  					<textarea class="feedback-content-area" id="message" name="message" placeholder="В свободной форме"></textarea>
+  					<textarea class="feedback-content-aria" id="message" name="message" placeholder="В свободной форме"></textarea>
   				</p>
   			</div>
   			<div class="btn-send-background">
