Подключил минифицированные файлы

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/styles.min.css">
   <title>HTML Academy: Техномарт</title>
 </head>
 
@@ -137,7 +137,7 @@
         <!-- items of popular products -->
         <div class="popular-products-items">
           <!-- product item 1 -->
-          <article class="catalog-item">
+          <article class="catalog-item" tabindex="0">
             <div class="catalog-item-flag">новинка</div>
             <div class="catalog-item-actions">
               <a class="catalog-item-buy" href="#">Купить</a>
@@ -151,7 +151,7 @@
             <span class="catalog-item-price">25500 Р.</span>
           </article>
           <!-- product item 2 -->
-          <article class="catalog-item">
+          <article class="catalog-item" tabindex="0">
             <div class="catalog-item-flag">новинка</div>
             <div class="catalog-item-actions">
               <a class="catalog-item-buy" href="#">Купить</a>
@@ -165,7 +165,7 @@
             <span class="catalog-item-price">15500 р.</span>
           </article>
           <!-- product item 3 -->
-          <article class="catalog-item">
+          <article class="catalog-item" tabindex="0">
             <div class="catalog-item-flag">новинка</div>
             <div class="catalog-item-actions">
               <a class="catalog-item-buy" href="#">Купить</a>
@@ -179,7 +179,7 @@
             <span class="catalog-item-price">25500 р.</span>
           </article>
           <!-- product item 4 -->
-          <article class="catalog-item">
+          <article class="catalog-item" tabindex="0">
             <div class="catalog-item-flag">новинка</div>
             <div class="catalog-item-actions">
               <a class="catalog-item-buy" href="#">Купить</a>
@@ -245,7 +245,7 @@
           <div class="services-container">
             <!-- services controls -->
             <div class="services-controls">
-              <button class="services-control" type="button">Доставка</button>
+              <button class="services-control services-control-current" type="button">Доставка</button>
               <button class="services-control" type="button">Гарантия</button>
               <button class="services-control" type="button">Кредит</button>
             </div>
@@ -395,6 +395,6 @@
     </p>
     <button class="modal-close" type="button" aria-label="Закрыть модальное окно"></button>
   </section>
-  <script src="js/scripts.js"></script>
+  <script src="js/scripts.min.js"></script>
 </body>
 </html>
