--- a/inner.html
+++ b/inner.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/styles.min.css">
   <title>HTML Academy: Техномарт</title>
 </head>
 
@@ -155,12 +155,12 @@
             <li><a class="sorting-link by-type" href="#">По типу</a></li>
             <li><a class="sorting-link by-functionality" href="#">По функционалу</a></li>
             <li>
-            	<a class="sorting-link arrow-up arrow-up-current" aria-label="по возрастанию">
+            	<a class="sorting-link arrow-up arrow-up-current" href="#" aria-label="по возрастанию">
             		<svg xmlns="http://www.w3.org/2000/svg" width="11" height="10"><path d="M5.5 0L0 10h11z"/></svg>
             	</a>
             </li>
             <li>
-            	<a class="sorting-link arrow-down" aria-label="по убыванию">
+            	<a class="sorting-link arrow-down" href="#" aria-label="по убыванию">
             		<svg xmlns="http://www.w3.org/2000/svg" width="11" height="10"><path d="M5.5 10L0 0h11"/></svg>
             	</a>
             </li>
@@ -170,7 +170,7 @@
         <section class="catalog-items">
           <h2 class="visually-hidden product-title">Список товаров</h2>
           <!-- product item 1 -->
-          <article class="catalog-item">
+          <article class="catalog-item" tabindex="0">
             <div class="catalog-item-flag">новинка</div>
             <div class="catalog-item-actions">
               <a class="catalog-item-buy" href="#">Купить</a>
@@ -184,7 +184,7 @@
             <span class="catalog-item-price">15500 р.</span>
           </article>
           <!-- product item 2 -->
-          <article class="catalog-item">
+          <article class="catalog-item" tabindex="0">
             <div class="catalog-item-flag">новинка</div>
             <div class="catalog-item-actions">
               <a class="catalog-item-buy" href="#">Купить</a>
@@ -198,7 +198,7 @@
             <span class="catalog-item-price">25500 р.</span>
           </article>
           <!-- product item 3 -->
-          <article class="catalog-item">
+          <article class="catalog-item" tabindex="0">
             <div class="catalog-item-flag">новинка</div>
             <div class="catalog-item-actions">
               <a class="catalog-item-buy" href="#">Купить</a>
@@ -212,7 +212,7 @@
             <span class="catalog-item-price">12500 р.</span>
           </article>
           <!-- product item 4 -->
-          <article class="catalog-item">
+          <article class="catalog-item" tabindex="0">
             <div class="catalog-item-flag">новинка</div>
             <div class="catalog-item-actions">
               <a class="catalog-item-buy" href="#">Купить</a>
@@ -226,7 +226,7 @@
             <span class="catalog-item-price">15500 р.</span>
           </article>
           <!-- product item 5 -->
-          <article class="catalog-item">
+          <article class="catalog-item" tabindex="0">
             <div class="catalog-item-flag">новинка</div>
             <div class="catalog-item-actions">
               <a class="catalog-item-buy" href="#">Купить</a>
@@ -240,7 +240,7 @@
             <span class="catalog-item-price">25500 р.</span>
           </article>
           <!-- product item 6 -->
-          <article class="catalog-item">
+          <article class="catalog-item" tabindex="0">
             <div class="catalog-item-flag">новинка</div>
             <div class="catalog-item-actions">
               <a class="catalog-item-buy" href="#">Купить</a>
@@ -254,7 +254,7 @@
             <span class="catalog-item-price">12500 р.</span>
           </article>
           <!-- product item 7 -->
-          <article class="catalog-item">
+          <article class="catalog-item" tabindex="0">
             <div class="catalog-item-flag">новинка</div>
             <div class="catalog-item-actions">
               <a class="catalog-item-buy" href="#">Купить</a>
@@ -268,7 +268,7 @@
             <span class="catalog-item-price">15500 р.</span>
           </article>
           <!-- product item 8 -->
-          <article class="catalog-item">
+          <article class="catalog-item" tabindex="0">
             <div class="catalog-item-flag">новинка</div>
             <div class="catalog-item-actions">
               <a class="catalog-item-buy" href="#">Купить</a>
@@ -282,7 +282,7 @@
             <span class="catalog-item-price">25500 р.</span>
           </article>
           <!-- product item 9 -->
-          <article class="catalog-item">
+          <article class="catalog-item" tabindex="0">
             <div class="catalog-item-flag">новинка</div>
             <div class="catalog-item-actions">
               <a class="catalog-item-buy" href="#">Купить</a>
@@ -381,6 +381,6 @@
       <button class="modal-close" type="button" aria-label="Закрыть модальное окно"></button>
     </div>
   </section>
-  <script src="js/scripts.js"></script>
+  <script src="js/scripts.min.js"></script>
 </body>
 </html>
