--- a/inner.html
+++ b/inner.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/styles.min.css">
+  <link rel="stylesheet" href="css/styles.css">
   <title>HTML Academy: Техномарт</title>
 </head>
 
@@ -42,8 +42,9 @@
         <p class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
       </div>
       <!-- person information -->
-      <div class="person-container">
-        <a class="person-link" href="#">Равшан Джамшутович</a>
+      <div class="page-user-control">
+        <a class="user-name" href="inner.html">Равшан Джамшутович</a>
+        <a class="user-exit" href="index.html"><span class="visually-hidden" aria-label="Выйти из личного кабинета"></span></a>
         <a class="order-link" href="#">Мои заказы</a>
         <a class="parlour-link" href="#">Личный кабинет</a>
       </div>
@@ -68,7 +69,7 @@
     <!-- breakdcrumbs -->
     <div class="container">
       <ul class="breadcrumbs">
-        <li class="breadcrumbs-item breadcrumbs-home"><a class="breadcrumbs-home-link" href="#"></a></li>
+        <li class="breadcrumbs-item breadcrumbs-home"><a class="breadcrumbs-home-link" href="#" aria-label="На домашнюю страницу"></a></li>
         <li class="breadcrumbs-item breadcrumbs-catalog"><a href="#">Каталог</a></li>
         <li class="breadcrumbs-item breadcrumbs-tool"><a href="#">Инструмент</a></li>
         <li class="breadcrumbs-item breadcrumbs-perforator breadcrumbs-current">Перфораторы</li>
@@ -171,7 +172,6 @@
           <h2 class="visually-hidden product-title">Список товаров</h2>
           <!-- product item 1 -->
           <article class="catalog-item" tabindex="0">
-            <div class="catalog-item-flag">новинка</div>
             <div class="catalog-item-actions">
               <a class="catalog-item-buy" href="#">Купить</a>
               <a class="catalog-item-bookmarks" href="#">В закладки</a>
@@ -185,7 +185,6 @@
           </article>
           <!-- product item 2 -->
           <article class="catalog-item" tabindex="0">
-            <div class="catalog-item-flag">новинка</div>
             <div class="catalog-item-actions">
               <a class="catalog-item-buy" href="#">Купить</a>
               <a class="catalog-item-bookmarks" href="#">В закладки</a>
@@ -213,7 +212,6 @@
           </article>
           <!-- product item 4 -->
           <article class="catalog-item" tabindex="0">
-            <div class="catalog-item-flag">новинка</div>
             <div class="catalog-item-actions">
               <a class="catalog-item-buy" href="#">Купить</a>
               <a class="catalog-item-bookmarks" href="#">В закладки</a>
@@ -241,7 +239,6 @@
           </article>
           <!-- product item 6 -->
           <article class="catalog-item" tabindex="0">
-            <div class="catalog-item-flag">новинка</div>
             <div class="catalog-item-actions">
               <a class="catalog-item-buy" href="#">Купить</a>
               <a class="catalog-item-bookmarks" href="#">В закладки</a>
@@ -269,7 +266,6 @@
           </article>
           <!-- product item 8 -->
           <article class="catalog-item" tabindex="0">
-            <div class="catalog-item-flag">новинка</div>
             <div class="catalog-item-actions">
               <a class="catalog-item-buy" href="#">Купить</a>
               <a class="catalog-item-bookmarks" href="#">В закладки</a>
@@ -283,7 +279,6 @@
           </article>
           <!-- product item 9 -->
           <article class="catalog-item" tabindex="0">
-            <div class="catalog-item-flag">новинка</div>
             <div class="catalog-item-actions">
               <a class="catalog-item-buy" href="#">Купить</a>
               <a class="catalog-item-bookmarks" href="#">В закладки</a>
