--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/styles.min.css">
+  <link rel="stylesheet" href="css/styles.css">
   <title>HTML Academy: Техномарт</title>
 </head>
 
@@ -138,7 +138,6 @@
         <div class="popular-products-items">
           <!-- product item 1 -->
           <article class="catalog-item" tabindex="0">
-            <div class="catalog-item-flag">новинка</div>
             <div class="catalog-item-actions">
               <a class="catalog-item-buy" href="#">Купить</a>
               <a class="catalog-item-bookmarks" href="#">В закладки</a>
@@ -152,7 +151,6 @@
           </article>
           <!-- product item 2 -->
           <article class="catalog-item" tabindex="0">
-            <div class="catalog-item-flag">новинка</div>
             <div class="catalog-item-actions">
               <a class="catalog-item-buy" href="#">Купить</a>
               <a class="catalog-item-bookmarks" href="#">В закладки</a>
@@ -166,7 +164,6 @@
           </article>
           <!-- product item 3 -->
           <article class="catalog-item" tabindex="0">
-            <div class="catalog-item-flag">новинка</div>
             <div class="catalog-item-actions">
               <a class="catalog-item-buy" href="#">Купить</a>
               <a class="catalog-item-bookmarks" href="#">В закладки</a>
@@ -206,7 +203,7 @@
         <!-- brands-list -->
         <ul class="brands-items">
           <li class="brands-item brands-bosch">
-            <a href="#"><img src="img/bosch.jpg" width="137" height="37" alt="Товарный знак бренда Bosch"></a>
+            <a href="#"><img src="img/bosch.jpg" width="126" height="37" alt="Товарный знак бренда Bosch"></a>
           </li>
           <li class="brands-item brands-makita">
             <a href="#"><img src="img/makita.jpg" width="123" height="40" alt="Товарный знак бренда Makita"></a>
@@ -256,7 +253,6 @@
                   <h3 class="delivery-title">Доставка</h3>
                   <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем,<br> поднимая его на ваш этаж!</p>
                 </div>
-                <img class="delivery-img" src="img/delivery-truck.png" width="468" height="261" alt="">
               </div>
               <!-- warranty slider -->
               <div class="warranty-slide">
@@ -264,7 +260,6 @@
                   <h3 class="warranty-title">Гарантия</h3>
                   <p>Если купленный у нас товар поломается или заискрит,<br> а также в случае пожара, спровоцированного его возгаранием, вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый.<br> Дом уж восстановите как-нибудь сами.</p>
                 </div>
-                <img class="warranty-img" src="img/warranty-medal.png" width="389" height="283" alt="">
               </div>
               <!-- credit slider -->
               <div class="credit-slide">
@@ -273,7 +268,6 @@
                   <p>Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.</p>
                   <a class="btn credit-btn" href="#">Отправить заявку</a>
                 </div>
-                <img class="credit-img" src="img/credit-cash.png" width="465" height="285" alt="">
               </div>
             </div>
           </div>
@@ -302,7 +296,7 @@
           <a class="map-link" href="#">
             <img class="map-location" src="img/map.jpg" width="300" height="158" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
           </a>
-          <a class="btn write-us" href="#">Заблудились? Напишите нам!</a>
+          <a class="btn write-us" href="writeus.html">Заблудились? Напишите нам!</a>
         </section>
       </div>
     </div>
