--- a/inner.html
+++ b/inner.html
@@ -43,8 +43,12 @@
       </div>
       <!-- person information -->
       <div class="page-user-control">
-        <a class="user-name" href="inner.html">Равшан Джамшутович</a>
-        <a class="user-exit" href="index.html"><span class="visually-hidden" aria-label="Выйти из личного кабинета"></span></a>
+        <div class="user-wrapper">
+          <a class="user-name" href="inner.html">Равшан Джамшутович</a>
+          <a class="user-exit" href="index.html">
+        </div>
+          <span class="visually-hidden" aria-label="Выйти из личного кабинета"></span>
+        </a>
         <a class="order-link" href="#">Мои заказы</a>
         <a class="parlour-link" href="#">Личный кабинет</a>
       </div>
