--- a/inner.html
+++ b/inner.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/styles.min.css">
   <title>HTML Academy: Техномарт</title>
 </head>
 
@@ -46,9 +46,9 @@
         <div class="user-wrapper">
           <a class="user-name" href="inner.html">Равшан Джамшутович</a>
           <a class="user-exit" href="index.html">
+            <span class="visually-hidden" aria-label="Выйти из личного кабинета"></span>
+          </a>
         </div>
-          <span class="visually-hidden" aria-label="Выйти из личного кабинета"></span>
-        </a>
         <a class="order-link" href="#">Мои заказы</a>
         <a class="parlour-link" href="#">Личный кабинет</a>
       </div>
